// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`a conversation of another organization, and one without messages 1`] = `
[
  "000000000001",
  "000000000006",
  "000000000007",
  "000000000005",
  "000000000004",
  "000000000002",
  "000000000000",
]
`;

exports[`filter: 24h 1`] = `
[
  "000000000001",
  "000000000006",
  "000000000007",
  "000000000005",
  "000000000004",
  "000000000002",
]
`;

exports[`filter: archivadas 1`] = `
[
  "000000000003",
]
`;

exports[`filter: pendientes 1`] = `
[
  "000000000001",
  "000000000006",
  "000000000004",
  "000000000002",
  "000000000000",
]
`;

exports[`filter: todas 1`] = `
[
  "000000000001",
  "000000000006",
  "000000000007",
  "000000000005",
  "000000000004",
  "000000000002",
  "000000000000",
]
`;

exports[`nothing matches 1`] = `[]`;

exports[`search by name 1`] = `
[
  "000000000004",
  "000000000007",
  "000000000006",
  "000000000005",
  "000000000002",
  "000000000001",
  "000000000000",
]
`;

exports[`the store after a scripted run of events 1`] = `
{
  "convOrder": [
    "000000000006",
    "000000000000",
    "000000000007",
    "000000000005",
    "000000000004",
    "000000000003",
    "000000000002",
    "000000000001",
  ],
  "rows": {
    "000000000000": [
      {
        "id": "0000000000f1",
        "status": {
          "delivered": "2026-09-01T10:00:01.000Z",
        },
        "timestamp": "2026-09-02T11:59:00.000Z",
      },
      {
        "id": "000000000057",
        "status": {
          "delivered": "2026-09-01T10:00:01.000Z",
        },
        "timestamp": "2026-08-31T11:52:00.000Z",
      },
    ],
    "000000000001": [
      {
        "id": "000000000058",
        "status": {
          "delivered": "2026-09-01T10:00:01.000Z",
        },
        "timestamp": "2026-09-02T11:53:00.000Z",
      },
    ],
    "000000000002": [
      {
        "id": "000000000059",
        "status": {
          "delivered": "2026-09-01T10:00:01.000Z",
        },
        "timestamp": "2026-09-02T11:54:00.000Z",
      },
    ],
    "000000000003": [
      {
        "id": "000000000060",
        "status": {
          "delivered": "2026-09-01T10:00:01.000Z",
        },
        "timestamp": "2026-09-02T11:55:00.000Z",
      },
    ],
    "000000000004": [
      {
        "id": "000000000061",
        "status": {
          "delivered": "2026-09-01T10:00:01.000Z",
        },
        "timestamp": "2026-09-02T11:56:00.000Z",
      },
      {
        "id": "0000000000f2",
        "status": {
          "delivered": "2026-09-01T10:00:01.000Z",
        },
        "timestamp": "2026-09-01T00:00:00.000Z",
      },
    ],
    "000000000005": [
      {
        "id": "000000000062",
        "status": {
          "accepted": "2026-09-01T10:01:00.000Z",
        },
        "timestamp": "2026-09-02T11:57:00.000Z",
      },
    ],
    "000000000006": [
      {
        "id": "0000000000f3",
        "status": {
          "delivered": "2026-09-01T10:00:01.000Z",
        },
        "timestamp": "2026-09-02T11:59:30.000Z",
      },
      {
        "id": "000000000063",
        "status": {
          "delivered": "2026-09-01T10:00:01.000Z",
        },
        "timestamp": "2026-09-02T11:58:00.000Z",
      },
    ],
    "000000000007": [
      {
        "id": "000000000064",
        "status": {
          "accepted": "2026-09-01T10:01:00.000Z",
          "read": "2026-09-02T12:00:00.000Z",
        },
        "timestamp": "2026-09-02T11:59:00.000Z",
      },
    ],
  },
}
`;

exports[`the store after a scripted run of events 2`] = `
[
  "000000000001",
  "000000000006",
  "000000000000",
  "000000000007",
  "000000000005",
  "000000000004",
  "000000000002",
]
`;
